# rk3399-face-detect-db

./: .auto-headers-lock.json  .editorconfig  .gitignore  AutoHeaders.json  Doxyfile  README.md  STRUCTURE.md  TODO.md  auto-headers.json  build.sh  clean.sh  test.config.json  test.sh
demo/: demo-rk3399-face-detect-db.pro  face_manager.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
docs/: CTAGS.md  LSYNCD.md  UNIT_TEST_PROGRESS.md
docs/doxygen-configuration/: ICON_README.md
libs/arm64-ff-face-sdk/: README.md
scripts/: build.sh  check-no-absolute-path-git-hook.sh  check.sh  cppcheck.sh  gen-export-symbol-list.sh  gen-hpp-util.sh  get-cpu-core-count.sh  get-latest-face-haarcascades.sh  lsyncd-init.sh  lsyncd-start.sh  make.sh  resolve-all-hpp.sh  resolve-test-cmake.sh  setup-test-environment.sh
src/: CMakeLists.txt  compile_options.hpp  db-walker.cc  db_walker.cc  export_symbols.map  main.cc  rk3399-face-detect-db.files  rk3399-face-detect-db.includes
src/api/: api.cc  api.hpp  api__helper.hpp  api_core.cc  api_cowsay.cc  api_detect.cc  api_draw_face_rect.cc  api_get_frame.cc  api_init.cc  api_update_db.cc
src/config/: config.cc  config.hpp  global.cc  methods.cc  methods.hpp  types.hpp
src/db-client/: base.hpp  command_reader.cc  db_info.cc  help.cc  index.hpp  main.cc  reader.cc  seek.cc  writer.cc
src/face/: face.cc  face.hpp  face_addon.hpp  type_convert.cc
src/frame-buffer/: structure.hpp
src/global/: _constant.hpp  configurations.cc  frame_buffer.cc  global.hpp  lockers.cc
src/include/: firefly_faceverify.hpp  firefly_faceverify_simulation.cc  firefly_faceverify_version.hpp
src/log/: log.hpp  methods.cc  methods.hpp
src/media/: capture.cc  media.hpp
src/media_handlers/: capture.cc  media_handlers.hpp
src/public_types/: api_error_no.hpp  api_types.hpp  base.hpp  capture.hpp  config.hpp  database.hpp  database_operation.hpp  firefly_face_sdk.hpp
src/storage/: blank_space_manager.cc  encoder.cc  hash.cc  item_reader.cc  item_writer.cc  main.cc  storage.hpp
src/types/: api_error_no.hpp  base.hpp  capture.hpp  config.hpp  database.hpp  database_operation.hpp  detect.hpp  firefly_face_sdk.hpp
src/utils/: convert2string.cc  fs.cc  memory.hpp  opencv.cc  opencv.hpp  rect_motion_simulator.hpp  timer.hpp  utils.hpp
test/: CMakeLists.txt  call_debug_so_test.cc  call_release_so_test.cc  captures_test.cc  cpp_malloc_sizeof_test.cc  cpp_test.cc  jna_struct_test_so.cc  jna_struct_test_so.hpp  jna_struct_test_so_base.hpp  log_test.cc  test-rk3399-face-detect-db.files  test-rk3399-face-detect-db.includes  test1.cc  utils_fs_test.cc
test/gui/: call_debug_so_get_frame.cc  cv_capture.cc  cv_capture_queue.cc  cv_img_win_test.cc  rect_motion_simulator.cc  utils_opencv_face_test.cc  utils_opencv_test.cc
test/images/: README.md
test/once/: call_debug_so_test.cc  call_release_so_test.cc  random_access_file.cc
test/once/arm64-only/: call_api_on_arm.cc
test/once/computer_vision/: blur_detect_time_consuming.cc
test/once/cpp_base/: cpp_malloc_sizeof_test.cc  cpp_pointer_as_parameter.cc  cpp_test.cc  cpp_thread_test.cc
test/once/jna/: jna_struct_test_so.cc  jna_struct_test_so.hpp  jna_struct_test_so_base.hpp
test/once/storage/: main.cc
test/unit/: captures_test.cc  database_init.cc  hash_user_item.cc  log_test.cc  sizeof_structures.cc  utils_fs_test.cc  utils_memory.cc
test/unit-arm/: arm_test.cc
test/utilities/: index.cc  index.hpp  macro.hpp
test/utils/: index.cc  index.hpp
